--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9548,51 +9548,55 @@ div.panel .table tbody > tr td .cell-content .fa-times, table.table tbody > tr t
   margin: 10px auto;
 }
 /* line 35, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container .nav-pills li:hover {
+  background-color: #eeeeee;
+}
+/* line 39, partials/themes/matan-light/_bootswatch_overrides.scss */
 .df-menu .df-menu-container .nav-pills > li:first-child {
   padding-left: 13px;
   padding-right: 13px;
 }
-/* line 43, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 47, partials/themes/matan-light/_bootswatch_overrides.scss */
 .df-menu .df-menu-container .nav-pills > li a {
   color: #7490a9;
   margin: 10px auto;
 }
-/* line 49, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 53, partials/themes/matan-light/_bootswatch_overrides.scss */
 .df-menu .df-menu-container .nav-pills > li.active {
   background-color: #f7f9fa;
 }
-/* line 54, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 58, partials/themes/matan-light/_bootswatch_overrides.scss */
 .df-menu .df-menu-container .nav-pills > li.active > a, .df-menu .df-menu-container .nav-pills > li.active > a:hover, .df-menu .df-menu-container .nav-pills > li.active > a:focus {
   font-weight: bold;
   color: #5b5bd9;
   background-color: transparent;
 }
 
-/* line 76, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 81, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li > a {
   padding-left: 0px;
 }
-/* line 80, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 85, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li > a:hover {
   background: transparent;
   color: #1d3d56;
   font-weight: bold;
 }
-/* line 87, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 92, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li.active a {
   font-weight: bold;
 }
-/* line 91, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 96, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li.active:hover a {
   color: #5b5bd9;
 }
 
-/* line 99, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 104, partials/themes/matan-light/_bootswatch_overrides.scss */
 .well {
   box-shadow: none;
 }
 
-/* line 103, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 108, partials/themes/matan-light/_bootswatch_overrides.scss */
 .btn-default {
   background-image: none;
   background-color: transparent;
@@ -9600,14 +9604,14 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   opacity: 1 !important;
 }
 
-/* line 110, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 115, partials/themes/matan-light/_bootswatch_overrides.scss */
 .panel {
   border: none;
   box-shadow: none;
   background-color: transparent;
 }
 
-/* line 116, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 121, partials/themes/matan-light/_bootswatch_overrides.scss */
 .row-no-padding > [class*="col-"] {
   padding-left: 0 !important;
   padding-right: 0 !important;
