--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -8946,17 +8946,36 @@ button.close {
   background-color: #fff;
 }
 
-/* line 3, partials/themes/matan-light/_base_override.scss */
+/* line 4, partials/themes/matan-light/_base_override.scss */
+html body .help-container .help-box {
+  box-shadow: 0 6px 18px -10px rgba(0, 0, 0, 0.2), 0 0 5px 0 rgba(0, 0, 0, 0.1);
+  min-width: 260px;
+}
+/* line 8, partials/themes/matan-light/_base_override.scss */
+html body .help-container .help-box .panel-heading, html body .help-container .help-box .panel-body {
+  background-color: #FFFFFF;
+  color: #1d3d56;
+}
+/* line 13, partials/themes/matan-light/_base_override.scss */
+html body .help-container .help-box .panel-heading {
+  font-weight: bold;
+  border-bottom: none;
+}
+/* line 18, partials/themes/matan-light/_base_override.scss */
+html body .help-container .help-box .panel-body {
+  padding-top: 0px;
+}
+/* line 24, partials/themes/matan-light/_base_override.scss */
 html body .df-section {
   background-color: #F7F9FA;
   padding-left: 30px;
 }
-/* line 7, partials/themes/matan-light/_base_override.scss */
+/* line 28, partials/themes/matan-light/_base_override.scss */
 html body .df-section a.hiperlinkable {
   color: #119add;
   text-decoration: underline;
 }
-/* line 13, partials/themes/matan-light/_base_override.scss */
+/* line 34, partials/themes/matan-light/_base_override.scss */
 html body .df-section-header {
   text-align: left;
   background: #F7F9FA;
@@ -8964,39 +8983,39 @@ html body .df-section-header {
   margin-top: 27px;
   margin-bottom: 15px;
 }
-/* line 22, partials/themes/matan-light/_base_override.scss */
+/* line 43, partials/themes/matan-light/_base_override.scss */
 html body .df-section-header h4 {
   color: #2e2ea3;
   margin: 0;
   font-weight: bold;
   font-size: 16px;
 }
-/* line 31, partials/themes/matan-light/_base_override.scss */
+/* line 52, partials/themes/matan-light/_base_override.scss */
 html body .df-section-toolbar .well {
   padding: 0px;
   min-height: auto;
   float: right;
   margin-bottom: 27px;
 }
-/* line 37, partials/themes/matan-light/_base_override.scss */
+/* line 58, partials/themes/matan-light/_base_override.scss */
 html body .df-section-toolbar .well * {
   font-size: 14px;
   text-shadow: none;
 }
-/* line 47, partials/themes/matan-light/_base_override.scss */
+/* line 68, partials/themes/matan-light/_base_override.scss */
 html body .df-section-toolbar .well .btn-group {
   float: left !important;
 }
-/* line 53, partials/themes/matan-light/_base_override.scss */
+/* line 74, partials/themes/matan-light/_base_override.scss */
 html body .df-section-toolbar .well .df-download-sdk button {
   padding-left: 0px;
 }
-/* line 58, partials/themes/matan-light/_base_override.scss */
+/* line 79, partials/themes/matan-light/_base_override.scss */
 html body .df-section-toolbar .well .left-arrow, html body .df-section-toolbar .well .right-arrow {
   padding-left: 0px;
   padding-right: 0px;
 }
-/* line 62, partials/themes/matan-light/_base_override.scss */
+/* line 83, partials/themes/matan-light/_base_override.scss */
 html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar .well .right-arrow i {
   width: auto;
 }
