--- a/app/styles/sass/partials/themes/matan-light/_forms.scss
+++ b/app/styles/sass/partials/themes/matan-light/_forms.scss
@@ -39,6 +39,7 @@ html {
         box-shadow: 0 13px 14px -10px rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.05);
         background-image: linear-gradient(113deg, #5a6aff, #789dff);
         background-color: #789dff;
+        border: none;
       }
 
       .btn-dark {
