--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9293,8 +9293,9 @@ html body .form-controls .btn-primary, html body .form-controls .form-group .btn
   box-shadow: 0 13px 14px -10px rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.05);
   background-image: linear-gradient(113deg, #5a6aff, #789dff);
   background-color: #789dff;
+  border: none;
 }
-/* line 44, partials/themes/matan-light/_forms.scss */
+/* line 45, partials/themes/matan-light/_forms.scss */
 html body .form-controls .btn-dark {
   background-color: #1d3d56;
   color: #ffffff;
