--- a/app/styles/sass/partials/themes/matan-light/_base_override.scss
+++ b/app/styles/sass/partials/themes/matan-light/_base_override.scss
@@ -1,5 +1,11 @@
 html {
   body {
+    .full-color-bg {
+      background-image: none;
+      background-color: rgba(236, 239, 242, 0.4);
+
+    }
+
     .help-container {
       .help-box {
         box-shadow: 0 6px 18px -10px rgba(0, 0, 0, 0.2), 0 0 5px 0 rgba(0, 0, 0, 0.1);
