Finalize Services tab

--- a/app/admin_components/adf-roles/views/df-assign-lookup-keys.html
+++ b/app/admin_components/adf-roles/views/df-assign-lookup-keys.html
@@ -14,7 +14,13 @@
                 </th>
                 <th class="no-border">
                     <div class="btn-group">
-                        <button type="button" id="roles_details_lookupkeys_addlookupkeys" class="btn btn-default btn-sm" data-ng-click="addLookUpKey()" title="Add lookup key">
+                        <button
+                            type="button"
+                            id="roles_details_lookupkeys_addlookupkeys"
+                            class="btn btn-default btn-sm"
+                            data-ng-click="addLookUpKey()"
+                            title="Add lookup key"
+                        >
                             <i class="fa fa-plus fa-fw"></i>
                         </button>
                     </div>
