--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9181,15 +9181,23 @@ button.close {
   opacity: 0.88;
 }
 
-/* line 5, partials/themes/matan-light/_forms.scss */
-html body form.df-inputs-width .df-inputs-row > * {
-  max-width: 500px;
+/* line 7, partials/themes/matan-light/_forms.scss */
+html body .list-group-item button.dropdown-toggle, html body .list-group-item .dropdown-menu, html body table button.dropdown-toggle, html body table .dropdown-menu, html body .form-group button.dropdown-toggle, html body .form-group .dropdown-menu {
+  background-color: #ffffff;
+  border: 1px solid #cfd9e2;
+  border-radius: 4px;
 }
-/* line 11, partials/themes/matan-light/_forms.scss */
+/* line 16, partials/themes/matan-light/_forms.scss */
+html body form.df-inputs-width .df-inputs-row > input, html body form.df-inputs-width .df-inputs-row select, html body form.df-inputs-width .df-inputs-row .dropdown-toggle, html body form.df-inputs-width .df-inputs-row .dropdown-menu {
+  width: 100%;
+  max-width: 500px;
+  text-align: left;
+}
+/* line 24, partials/themes/matan-light/_forms.scss */
 html body input, html body input.form-control {
   border: 1px solid #cfd9e2;
 }
-/* line 15, partials/themes/matan-light/_forms.scss */
+/* line 28, partials/themes/matan-light/_forms.scss */
 html body label {
   display: inline-block;
   max-width: 100%;
@@ -9197,26 +9205,26 @@ html body label {
   font-weight: normal;
   padding-left: 8px;
 }
-/* line 23, partials/themes/matan-light/_forms.scss */
+/* line 36, partials/themes/matan-light/_forms.scss */
 html body div.checkbox, html body div.radio {
   padding-left: 7px;
 }
-/* line 27, partials/themes/matan-light/_forms.scss */
+/* line 40, partials/themes/matan-light/_forms.scss */
 html body i.fa-info-circle {
   color: #7490a9;
 }
-/* line 33, partials/themes/matan-light/_forms.scss */
+/* line 46, partials/themes/matan-light/_forms.scss */
 html body .form-controls .btn {
   min-width: 80px;
   font-size: 12px;
 }
-/* line 38, partials/themes/matan-light/_forms.scss */
+/* line 51, partials/themes/matan-light/_forms.scss */
 html body .form-controls .btn-default {
   border: 1px solid #8D9CA8;
   border-radius: 4px;
   height: 35px;
 }
-/* line 44, partials/themes/matan-light/_forms.scss */
+/* line 57, partials/themes/matan-light/_forms.scss */
 html body .form-controls .btn-primary, html body .form-controls .form-group .btn-primary .btn-primary:hover, html body .form-controls .btn-default.btn-primary:hover {
   height: 35px;
   border-radius: 4px;
@@ -9225,7 +9233,7 @@ html body .form-controls .btn-primary, html body .form-controls .form-group .btn
   background-color: #789dff;
   border: none;
 }
-/* line 53, partials/themes/matan-light/_forms.scss */
+/* line 66, partials/themes/matan-light/_forms.scss */
 html body .form-controls .btn-dark {
   background-color: #1d3d56;
   color: #ffffff;
@@ -9363,7 +9371,7 @@ html body .form-controls .btn-dark {
   display: block !important;
 }
 /* line 67, partials/themes/matan-light/_tables_override.scss */
-.table-rows-extendable tbody tr .input-cell > * input, table.table.table-rows-extendable tbody tr .input-cell > * input {
+.table-rows-extendable tbody tr .input-cell > * input, .table-rows-extendable tbody tr .input-cell > * select, table.table.table-rows-extendable tbody tr .input-cell > * input, table.table.table-rows-extendable tbody tr .input-cell > * select {
   width: 94%;
   padding-bottom: 0px;
 }
@@ -9372,51 +9380,55 @@ html body .form-controls .btn-dark {
   padding-top: 20px !important;
 }
 /* line 79, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .icon-cell button, table.table.table-rows-extendable tbody tr .icon-cell button {
+  padding-top: 0px;
+}
+/* line 83, partials/themes/matan-light/_tables_override.scss */
 .table-rows-extendable tbody tr .icon-cell i, table.table.table-rows-extendable tbody tr .icon-cell i {
   font-size: 14px;
   color: #183b59;
   text-align: left;
 }
-/* line 85, partials/themes/matan-light/_tables_override.scss */
+/* line 89, partials/themes/matan-light/_tables_override.scss */
 .table-rows-extendable tbody tr .icon-cell .btn:hover, .table-rows-extendable tbody tr .icon-cell .btn:focus, .table-rows-extendable tbody tr .icon-cell .btn:active, table.table.table-rows-extendable tbody tr .icon-cell .btn:hover, table.table.table-rows-extendable tbody tr .icon-cell .btn:focus, table.table.table-rows-extendable tbody tr .icon-cell .btn:active {
   border: none;
   background-color: transparent;
   outline: none;
   box-shadow: none;
 }
-/* line 93, partials/themes/matan-light/_tables_override.scss */
+/* line 97, partials/themes/matan-light/_tables_override.scss */
 .table-rows-extendable tbody tr td:last-child, table.table.table-rows-extendable tbody tr td:last-child {
   min-width: 0px !important;
 }
-/* line 95, partials/themes/matan-light/_tables_override.scss */
+/* line 99, partials/themes/matan-light/_tables_override.scss */
 .table-rows-extendable tbody tr td:last-child .cell-content, table.table.table-rows-extendable tbody tr td:last-child .cell-content {
   min-width: 0px;
 }
 
-/* line 103, partials/themes/matan-light/_tables_override.scss */
+/* line 107, partials/themes/matan-light/_tables_override.scss */
 div.panel .table, table.table, table.table.table-striped {
   background-color: #F7F9FA;
 }
-/* line 106, partials/themes/matan-light/_tables_override.scss */
+/* line 110, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead, div.panel .table > thead tr, table.table > thead, table.table > thead tr, table.table.table-striped > thead, table.table.table-striped > thead tr {
   background-color: #1d3d56;
   color: #ffffff;
   height: 38px;
 }
-/* line 111, partials/themes/matan-light/_tables_override.scss */
+/* line 115, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead th, div.panel .table > thead tr th, table.table > thead th, table.table > thead tr th, table.table.table-striped > thead th, table.table.table-striped > thead tr th {
   vertical-align: middle;
 }
-/* line 114, partials/themes/matan-light/_tables_override.scss */
+/* line 118, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead th > *, div.panel .table > thead tr th > *, table.table > thead th > *, table.table > thead tr th > *, table.table.table-striped > thead th > *, table.table.table-striped > thead tr th > * {
   padding-bottom: 3px;
   padding-left: 5px;
 }
-/* line 118, partials/themes/matan-light/_tables_override.scss */
+/* line 122, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead th button, div.panel .table > thead tr th button, table.table > thead th button, table.table > thead tr th button, table.table.table-striped > thead th button, table.table.table-striped > thead tr th button {
   color: #ffffff;
 }
-/* line 125, partials/themes/matan-light/_tables_override.scss */
+/* line 129, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody.tbody-transparent .cell-content, table.table tbody.tbody-transparent .cell-content, table.table.table-striped tbody.tbody-transparent .cell-content {
   background-color: transparent;
   box-shadow: none;
@@ -9424,17 +9436,17 @@ div.panel .table tbody.tbody-transparent .cell-content, table.table tbody.tbody-
   border-bottom-left-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
 }
-/* line 137, partials/themes/matan-light/_tables_override.scss */
+/* line 141, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr > td:first-child > .cell-content, table.table tbody > tr > td:first-child > .cell-content, table.table.table-striped tbody > tr > td:first-child > .cell-content {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-/* line 143, partials/themes/matan-light/_tables_override.scss */
+/* line 147, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr > td:last-child > .cell-content, table.table tbody > tr > td:last-child > .cell-content, table.table.table-striped tbody > tr > td:last-child > .cell-content {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-/* line 148, partials/themes/matan-light/_tables_override.scss */
+/* line 152, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr td, table.table tbody > tr td, table.table.table-striped tbody > tr td {
   padding: 0px;
   border: 0px;
@@ -9443,7 +9455,7 @@ div.panel .table tbody > tr td, table.table tbody > tr td, table.table.table-str
   height: 58px;
   min-width: 80px;
 }
-/* line 156, partials/themes/matan-light/_tables_override.scss */
+/* line 160, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr td .cell-content, table.table tbody > tr td .cell-content, table.table.table-striped tbody > tr td .cell-content {
   margin-top: 3px;
   margin-bottom: 3px;
@@ -9457,28 +9469,28 @@ div.panel .table tbody > tr td .cell-content, table.table tbody > tr td .cell-co
   height: 92%;
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
-/* line 169, partials/themes/matan-light/_tables_override.scss */
-div.panel .table tbody > tr td .cell-content *, table.table tbody > tr td .cell-content *, table.table.table-striped tbody > tr td .cell-content * {
+/* line 173, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content input, div.panel .table tbody > tr td .cell-content i, table.table tbody > tr td .cell-content input, table.table tbody > tr td .cell-content i, table.table.table-striped tbody > tr td .cell-content input, table.table.table-striped tbody > tr td .cell-content i {
   margin-top: 0px;
   padding-top: 0px;
   vertical-align: top;
 }
-/* line 175, partials/themes/matan-light/_tables_override.scss */
+/* line 179, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr td .cell-content > *, table.table tbody > tr td .cell-content > *, table.table.table-striped tbody > tr td .cell-content > * {
   display: table-cell;
   vertical-align: top;
   padding-top: 8px;
   padding-bottom: 16px;
 }
-/* line 182, partials/themes/matan-light/_tables_override.scss */
+/* line 186, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr td .cell-content > *:first-child, table.table tbody > tr td .cell-content > *:first-child, table.table.table-striped tbody > tr td .cell-content > *:first-child {
   padding-left: 13px;
 }
-/* line 186, partials/themes/matan-light/_tables_override.scss */
+/* line 190, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr td .cell-content .fa-check, table.table tbody > tr td .cell-content .fa-check, table.table.table-striped tbody > tr td .cell-content .fa-check {
   color: #22bca8;
 }
-/* line 190, partials/themes/matan-light/_tables_override.scss */
+/* line 194, partials/themes/matan-light/_tables_override.scss */
 div.panel .table tbody > tr td .cell-content .fa-times, table.table tbody > tr td .cell-content .fa-times, table.table.table-striped tbody > tr td .cell-content .fa-times {
   color: #f2526a;
 }
@@ -9735,22 +9747,22 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   box-shadow: none;
 }
 
-/* line 109, partials/themes/matan-light/_bootswatch_overrides.scss */
-.btn-default {
+/* line 110, partials/themes/matan-light/_bootswatch_overrides.scss */
+.well .btn-default, table .btn-default {
   background-image: none;
   background-color: transparent;
   border-color: transparent;
   opacity: 1 !important;
 }
 
-/* line 116, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 118, partials/themes/matan-light/_bootswatch_overrides.scss */
 .panel {
   border: none;
   box-shadow: none;
   background-color: transparent;
 }
 
-/* line 122, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 124, partials/themes/matan-light/_bootswatch_overrides.scss */
 .row-no-padding > [class*="col-"] {
   padding-left: 0 !important;
   padding-right: 0 !important;
