--- a/app/admin_components/adf-admins/views/df-manage-admins.html
+++ b/app/admin_components/adf-admins/views/df-manage-admins.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="panel panel-default">
-                            <table class="table table-responsive table-bordered table-striped table-hover table-condensed">
+                            <table class="table table-responsive table-bordered table-striped table-hover table-condensed table-striped">
                                 <thead>
                                     <th></th>
                                     <th data-ng-class="order.orderBy === field.name ? 'df-th-selected' : ''"
