--- a/app/styles/sass/partials/themes/matan-light/_base_override.scss
+++ b/app/styles/sass/partials/themes/matan-light/_base_override.scss
@@ -177,3 +177,8 @@ html {
 .pointerize {
   cursor: pointer!important;
 }
+
+#scripting-bc-nav {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+  background-color: white;
+}
